--- a/APIAutomation/test-output/old/Default suite/classes.html
+++ b/APIAutomation/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>org.testing.TestScripts.DeleteRequest</td>
+<td>org.testing.TestScripts.PostRequestTC</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC5</td>
+<td>TC1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
