--- a/APIAutomation/test-output/index.html
+++ b/APIAutomation/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,7 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">6 methods, 1 failed,   5 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="org.testing.TestScripts.ReadNUpdateJsonFile" class="method navigator-link" hash-for-method="TC6">TC6</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -110,6 +124,21 @@
                         <a href="#" panel-name="suite-Suite" title="org.testing.TestScripts.GetRequestTC" class="method navigator-link" hash-for-method="TC2">TC2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="org.testing.TestScripts.GetRequestWithQueryParameters" class="method navigator-link" hash-for-method="TC3">TC3</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="org.testing.TestScripts.PutRequest" class="method navigator-link" hash-for-method="TC4">TC4</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="org.testing.TestScripts.DeleteRequest" class="method navigator-link" hash-for-method="TC5">TC5</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
                   </li>
                 </ul>
@@ -122,6 +151,28 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">org.testing.TestScripts.ReadNUpdateJsonFile</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC6">
+                  </a> <!-- TC6 -->
+                  <span class="method-name">TC6</span>
+                  <div class="stack-trace">org.json.JSONException: JSONObject[&quot;options&quot;] not found.
+	at org.json.JSONObject.get(JSONObject.java:572)
+	at org.json.JSONObject.getJSONObject(JSONObject.java:782)
+	at org.testing.utilities.jsonHandling.jsonHandler(jsonHandling.java:16)
+	at org.testing.TestScripts.ReadNUpdateJsonFile.TC6(ReadNUpdateJsonFile.java:23)
+... Removed 25 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -133,6 +184,21 @@
                   <a name="TC1">
                   </a> <!-- TC1 -->
                   <span class="method-name">TC1</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">org.testing.TestScripts.GetRequestWithQueryParameters</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC3">
+                  </a> <!-- TC3 -->
+                  <span class="method-name">TC3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -152,6 +218,36 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">org.testing.TestScripts.PutRequest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC4">
+                  </a> <!-- TC4 -->
+                  <span class="method-name">TC4</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">org.testing.TestScripts.DeleteRequest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="TC5">
+                  </a> <!-- TC5 -->
+                  <span class="method-name">TC5</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -166,6 +262,10 @@
     &lt;classes&gt;
       &lt;class name=&quot;org.testing.TestScripts.PostRequestTC&quot;/&gt;
       &lt;class name=&quot;org.testing.TestScripts.GetRequestTC&quot;/&gt;
+      &lt;class name=&quot;org.testing.TestScripts.GetRequestWithQueryParameters&quot;/&gt;
+      &lt;class name=&quot;org.testing.TestScripts.PutRequest&quot;/&gt;
+      &lt;class name=&quot;org.testing.TestScripts.DeleteRequest&quot;/&gt;
+      &lt;class name=&quot;org.testing.TestScripts.ReadNUpdateJsonFile&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -179,7 +279,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (2 classes)</span>
+                <span class="test-name">Test (6 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -205,15 +305,31 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TC1')
 data.setCell(0, 2, 'org.testing.TestScripts.PostRequestTC')
-data.setCell(0, 3, 3055);
+data.setCell(0, 3, 3261);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC2')
-data.setCell(1, 2, 'org.testing.TestScripts.GetRequestTC')
-data.setCell(1, 3, 68);
+data.setCell(1, 1, 'TC3')
+data.setCell(1, 2, 'org.testing.TestScripts.GetRequestWithQueryParameters')
+data.setCell(1, 3, 143);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'TC2')
+data.setCell(2, 2, 'org.testing.TestScripts.GetRequestTC')
+data.setCell(2, 3, 94);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'TC4')
+data.setCell(3, 2, 'org.testing.TestScripts.PutRequest')
+data.setCell(3, 3, 67);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'TC5')
+data.setCell(4, 2, 'org.testing.TestScripts.DeleteRequest')
+data.setCell(4, 3, 37);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'TC6')
+data.setCell(5, 2, 'org.testing.TestScripts.ReadNUpdateJsonFile')
+data.setCell(5, 3, 28);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -254,7 +370,37 @@ return data;
               <div class="chronological-class-name">org.testing.TestScripts.GetRequestTC</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">TC2</span>
-                <span class="method-start">3059 ms</span>
+                <span class="method-start">3268 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">org.testing.TestScripts.GetRequestWithQueryParameters</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">TC3</span>
+                <span class="method-start">3365 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">org.testing.TestScripts.PutRequest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">TC4</span>
+                <span class="method-start">3510 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">org.testing.TestScripts.DeleteRequest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">TC5</span>
+                <span class="method-start">3581 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">org.testing.TestScripts.ReadNUpdateJsonFile</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">TC6</span>
+                <span class="method-start">3620 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
