--- a/APIAutomation/test-output/old/Suite/methods-alphabetical.html
+++ b/APIAutomation/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61d8d1">  <td>20/08/08 16:28:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRequestTC.TC1()[pri:0, instance:org.testing.TestScripts.PostRequestTC@4e5ed836]">TC1</td> 
-  <td>main@2101249621</td>   <td></td> </tr>
-<tr bgcolor="f6d1be">  <td>20/08/08 16:28:32</td>   <td>3057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRequestTC.TC2()[pri:0, instance:org.testing.TestScripts.GetRequestTC@43f02ef2]">TC2</td> 
-  <td>main@2101249621</td>   <td></td> </tr>
+<tr bgcolor="61d8d1">  <td>20/08/08 16:40:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRequestTC.TC1()[pri:0, instance:org.testing.TestScripts.PostRequestTC@2de56eb2]">TC1</td> 
+  <td>main@1571798597</td>   <td></td> </tr>
+<tr bgcolor="f6d1be">  <td>20/08/08 16:40:03</td>   <td>3268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRequestTC.TC2()[pri:0, instance:org.testing.TestScripts.GetRequestTC@3cce5371]">TC2</td> 
+  <td>main@1571798597</td>   <td></td> </tr>
+<tr bgcolor="9c9e7a">  <td>20/08/08 16:40:03</td>   <td>3363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRequestWithQueryParameters.TC3()[pri:0, instance:org.testing.TestScripts.GetRequestWithQueryParameters@17bffc17]">TC3</td> 
+  <td>main@1571798597</td>   <td></td> </tr>
+<tr bgcolor="e4659c">  <td>20/08/08 16:40:03</td>   <td>3509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutRequest.TC4()[pri:0, instance:org.testing.TestScripts.PutRequest@6e535154]">TC4</td> 
+  <td>main@1571798597</td>   <td></td> </tr>
+<tr bgcolor="b569d9">  <td>20/08/08 16:40:03</td>   <td>3579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRequest.TC5()[pri:0, instance:org.testing.TestScripts.DeleteRequest@15a34df2]">TC5</td> 
+  <td>main@1571798597</td>   <td></td> </tr>
+<tr bgcolor="64bc6c">  <td>20/08/08 16:40:03</td>   <td>3618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadNUpdateJsonFile.TC6()[pri:0, instance:org.testing.TestScripts.ReadNUpdateJsonFile@5b38c1ec]">TC6</td> 
+  <td>main@1571798597</td>   <td></td> </tr>
 </table>
